--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
       <!--call to action-->
       <section class="cta" id="cta">
         <h1>Book Any of Our Services<br> Anywhere in the World</h1>
-        <a href="clinton.mboloi@gmail.com" class="hero-btn">Send email</a>
+        <a href="contact.html" class="hero-btn">Send email</a>
       </section>
       <!---footer-->
       <section class="footer" id="footer">
