--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
             <form action="formhandler.php" method="post">
               <input type="text" name="name" placeholder="Enter your name" required>
               <input type="email" name="email" placeholder="Enter your email address" required>
-              <input type="text" name="subject" placeholder="Enter your email address" required>
+              <input type="text" name="subject" placeholder="Enter your subject" required>
               <textarea rows="8" name="message" placeholder="Message" required></textarea>
               <button type="submit" class="hero-btn">Send Message</button>
             </form>
